codex-rs/tui/src/snapshots/codex_tui__workspace_dashboard__tests__medical_workspace_keyboard_help_120x32.snap
---
source: tui/src/workspace_dashboard.rs
expression: rendered
---
Medical Workspace  /workspace-medical  SYNTHETIC DATA ONLY
Patient: No patient selected  DOB: blank  MRN: blank  Contact: Missing contact  Coverage: Missing coverage  Encounter:
 EXPLORER                      PATIENT CHART
┌Patient Dir┌Workspace Actions─────────────────────────────────────────────────────────────────────────────┐───────────┐
│Local searc│?/Esc close   : command                                                                       │           │
│0 active pa│                                                                                              │           │
│only       │Keyboard navigation                                                                           │           │
│No saved pa│  Tab/Shift-Tab changes pane                                                                  │           │
│New patient│  Arrow keys stay inside the focused pane                                                     │           │
│           │                                                                                              │           │
│           │Navigation                                                                                    │           │
│           │  Show workspace actions :actions [?]                                                         │───────────┘
└───────────│  Focus note title :focus note title                                                          │───────────┐
┌Patient Not│  Focus note body :focus note body                                                            │           │
│Patient Not│  Focus clinical workspace :focus clinical workspace                                          │───────────┘
│  New note │                                                                                              │───────────┐
│  No patien│Records / Patients                                                                            │           │
│:note new. │  Open patient list :patients                                                                 │           │
│  Medical, │  Open patient demographics :demographics                                                     │           │
│and admin n│  Edit patient demographics :demographics edit                                                │           │
└───────────│  Edit emergency contact :emergency contact edit                                              │           │
┌Uploaded Do│  Edit coverage :coverage edit                                                                │           │
│Uploaded Do│  Compare coverage card :coverage verify disabled: Save this coverage before comparing the    │           │
│No files ye│card.                                                                                         │───────────┘
│Paste/drop │  Restore local draft :draft restore disabled: No recoverable local draft for the active      │───────────┐
│           │patient and note.                                                                             │           │
│           │  Discard local draft :draft discard disabled: No recoverable local draft for the active      │           │
│           └──────────────────────────────────────────────────────────────────────────────────────────────┘           │
│                            ││                                                                                        │
│                            ││Intake Checklist                                                                        │
└────────────────────────────┘└────────────────────────────────────────────────────────────────────────────────────────┘
Focus: Directory | Mode: Navigate | Keys: ↑/↓ patient  Enter open  / search  Tab/⇧Tab pane  Ctrl-P commands
