codex-rs/tui/src/snapshots/codex_tui__workspace_dashboard__tests__medical_workspace_multiline_note_editor_80x20.snap
---
source: tui/src/workspace_dashboard.rs
expression: "render_dashboard_lines_at(&dashboard, 80, 20)"
---
Medical Workspace  Unsaved  /workspace-medical  SYNTHETIC DATA ONLY
Zones: Explorer > [Patient Chart] > Context Plan  Focus: Note Body
┌Note Body─────────────────────────────────────────────────────────────────────┐
│aaaaaaaaaaaaXaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa│
│aaaaaaaaaaaaa                                                                 │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
Focus: Note Body | Keys: ↑/↓ line  ←/→ cursor  Tab/⇧Tab pane  Ctrl-P commands
