codex-rs/tui/src/snapshots/codex_tui__workspace_dashboard__tests__medical_workspace_patient_search_120x32.snap
---
source: tui/src/workspace_dashboard.rs
expression: "render_dashboard_lines_at(&search, 120, 32)"
---
Medical Workspace
Patient: Jordan Patient  DOB: 1980-01-02  MRN: MRN-123  Contact: Contact on file  Coverage: Coverage on file  Encounter:
 EXPLORER                      PATIENT CHART
┌Patient Directory───────────┐┌Patient Demographics────────────────────────────────────────────────────────────────────┐
│Local search: /Jordan       ││Display: Jordan Patient                                                                 │
│2 active patients; local    ││Preferred: JP                                                                           │
│only                        ││DOB: 1980-01-02                                                                         │
│Enter opens chart; search is││Sex/Gender:                                                                             │
│not agent context.          ││Patient ID / MRN: MRN-123                                                               │
│> Jordan Patient  1980-01-02││Chart start:                                                                            │
│ MRN-123  active            ││Chart end:                                                                              │
│                            │└────────────────────────────────────────────────────────────────────────────────────────┘
└────────────────────────────┘┌Note Title──────────────────────────────────────────────────────────────────────────────┐
┌Patient Notes───────────────┐│Visit note                                                                              │
│Patient Notes               │└────────────────────────────────────────────────────────────────────────────────────────┘
│  New note                  │┌Note Body───────────────────────────────────────────────────────────────────────────────┐
│  No patient notes yet. Use ││Fake human-entered visit note body.                                                     │
│:note new.                  ││                                                                                        │
│  Medical, communication,   ││                                                                                        │
│and admin notes appear here.││                                                                                        │
└────────────────────────────┘│                                                                                        │
┌Uploaded Documents──────────┐│                                                                                        │
│Uploaded Documents          ││                                                                                        │
│No files yet                │└────────────────────────────────────────────────────────────────────────────────────────┘
│Paste/drop JPG/PDF. S...    │┌Today's Visit───────────────────────────────────────────────────────────────────────────┐
│                            ││Patient: Jordan Patient; note: Visit note                                               │
│                            ││Next                                                                                    │
│                            ││  ● Next: Open encounter                                                                │
│                            ││                                                                                        │
│                            ││Intake Checklist                                                                        │
└────────────────────────────┘└────────────────────────────────────────────────────────────────────────────────────────┘
Mode: Patient search | Keys: ↑/↓ patient  Enter open  Esc chart | /Jordan
