codex-rs/tui/src/snapshots/codex_tui__workspace_dashboard__tests__medical_workspace_patient_selection_failed_80x20.snap
---
source: tui/src/workspace_dashboard.rs
expression: rendered
---
Medical Workspace
Zones: [Explorer] > Patient Chart > Agent Work  Focus: Directory
┌Patient Directory─────────────────────────────────────────────────────────────┐
│Local search: /                                                               │
│0 active patients; local only                                                 │
│No saved patients yet.                                                        │
│New patient: :patient new                                                     │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
Focus: Directory | Status: Selected patient could not open; current patient is …
