codex-rs/tui/src/snapshots/codex_tui__workspace_dashboard__tests__medical_workspace_proposal_comparison_120x32.snap
---
source: tui/src/workspace_dashboard.rs
expression: "render_dashboard_lines_at(&dashboard, width, height)"
---
Medical Workspace
Patient: Jordan Patient  DOB: blank  MRN: blank  Contact: Missing contact  Coverage: Missing coverage  Encounter: No
 EXPLORER                      PATIENT CHART
┌Patient Directory───────────┐┌Patient Demographics────────────────────────────────────────────────────────────────────┐
│Local search: /             ││Display: Jordan Patient                                                                 │
│0 active patients; local    ││Preferred:                                                                              │
│only                        ││DOB:                                                                                    │
│No saved patients yet.      ││Sex/Gender:                                                                             │
│New patient: :patient new   ││Patient ID / MRN:                                                                       │
│                            ││Chart start: 2026-01-01                                                                 │
│                            ││Chart end: 2026-06-09                                                                   │
│                            │└────────────────────────────────────────────────────────────────────────────────────────┘
└────────────────────────────┘┌Note Title──────────────────────────────────────────────────────────────────────────────┐
┌Patient Notes───────────────┐│Visit note                                                                              │
│Patient Notes               │└────────────────────────────────────────────────────────────────────────────────────────┘
│  New note                  │┌Note Body───────────────────────────────────────────────────────────────────────────────┐
│  No patient notes yet. Use ││Assessment: improving gait tolerance.                                                   │
│:note new.                  ││Plan: continue current program.                                                         │
│  Medical, communication,   ││                                                                                        │
│and admin notes appear here.││                                                                                        │
└────────────────────────────┘│                                                                                        │
┌Uploaded Documents──────────┐│                                                                                        │
│Uploaded Documents          ││                                                                                        │
│No files yet                │└────────────────────────────────────────────────────────────────────────────────────────┘
│Paste/drop JPG/PDF. S...    │┌Agent Recommendation────────────────────────────────────────────────────────────────────┐
│                            ││Pending Proposal Changeset                                                              │
│                            ││Review state: READY · proposal base matches current r3                                  │
│                            ││  Guard: note r3 · Reason: tighten wording                                              │
│                            ││  Proposed: Assessment: gait tolerance improved with cueing. Plan: progress w...        │
│                            ││  ● Tab to Agent Work for full text · :proposal accept | :proposal decline              │
└────────────────────────────┘└────────────────────────────────────────────────────────────────────────────────────────┘
Focus: Center | Mode: Read-only chart | Keys: ↑/↓ scroll  PgUp/PgDn page  Tab/⇧Tab pane  Ctrl-P commands
